fix y axis alignment

--- a/panoctagon/assets/css/style.css
+++ b/panoctagon/assets/css/style.css
@@ -229,6 +229,15 @@ svg.main-svg {
     display: inline-block !important;
 }
 
+.plot-title-with-legend {
+    position: relative !important;
+    z-index: 10 !important;
+}
+
+.plot-title-with-legend + .plot-container-wrapper {
+    margin-top: -35px !important;
+}
+
 .plot-container-wrapper {
     background-color: rgb(242, 240, 227) !important;
     padding-top: 0 !important;
